# rs-cache

./: .gitignore  Cargo.toml  LICENSE  README.md  osrs_specifications.md  rs3_specifications.md
.github/workflows/: rust.yml
benches/: 578_cache.rs
data/cache/: main_file_cache.idx1  main_file_cache.idx10  main_file_cache.idx11  main_file_cache.idx12  main_file_cache.idx18  main_file_cache.idx19  main_file_cache.idx255  main_file_cache.idx3  main_file_cache.idx4  main_file_cache.idx5  main_file_cache.idx7  main_file_cache.idx8
data/osrs_cache/: main_file_cache.idx16  main_file_cache.idx2
data/rs3_cache/: .gitignore  904_sizes.txt
examples/: basic.rs  basic_owned_read.rs  basic_read.rs  custom_cache.rs  custom_loader.rs  custom_store.rs  osrs_update_protocol.rs  rs3_update_protocol.rs  update_protocol.rs  validate_crc.rs
rune-fs/: Cargo.toml
rune-fs/src/: archive.rs  codec.rs  error.rs  index.rs  lib.rs  parse.rs  sector.rs  xtea.rs
src/: arc.rs  archive.rs  cache.rs  checksum.rs  cksm.rs  codec.rs  compression.rs  container.rs  def.rs  definitions.rs  error.rs  errors.rs  ext.rs  extension.rs  idx.rs  index.rs  ldr.rs  lib.rs  parse.rs  parser.rs  sec.rs  sector.rs  store.rs  traits.rs  util.rs
src/cache/: archive.rs  index.rs  main_data.rs
src/def/: item_def.rs  loader.rs  npc_def.rs  obj_def.rs  osrs.rs  rs3.rs
src/def/loader/: item_loader.rs  npc_loader.rs  obj_loader.rs
src/def/osrs/: inv_def.rs  item_def.rs  loc_def.rs  map_def.rs  mdl_def.rs  npc_def.rs  obj_def.rs
src/def/rs3/: item_def.rs
src/definition/: mod.rs  osrs.rs  rs3.rs
src/definition/osrs/: item_def.rs  loc_def.rs  map_def.rs  npc_def.rs  obj_def.rs
src/definition/rs3/: item_def.rs
src/definitions/: item_def.rs  loaders.rs  npc_def.rs  obj_def.rs
src/definitions/loaders/: item_loader.rs  npc_loader.rs  obj_loader.rs
src/ldr/: osrs.rs  rs3.rs
src/ldr/osrs/: item_loader.rs  npc_loader.rs  obj_loader.rs
src/loader/: mod.rs  osrs.rs  rs3.rs
src/store/: file_store.rs  memory_store.rs
src/util/: huffman.rs  isaac_rand.rs  osrs.rs  rs3.rs  xtea.rs
src/util/osrs/: huffman.rs  isaac_rand.rs  xtea.rs
tests/: basic.rs  checksum.rs  common.rs  definitions.rs  general.rs  inventory.rs  item.rs  loader.rs  location.rs  map.rs  model.rs  npc.rs  object.rs  read.rs  test_util.rs  tests.rs
tests/cache/: main_file_cache.idx0  main_file_cache.idx20  main_file_cache.idx6
utils/: Cargo.toml
utils/src/: lib.rs  traits.rs
