[package]
name = "rs-cache"
version = "0.8.3" # Remember to update usage
authors = ["jimvdl <jimvdlind@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A read-only, high-level, virtual file API for the RuneScape cache."
repository = "https://github.com/jimvdl/rs-cache"
documentation = "https://docs.rs/rs-cache"
readme = "README.md"
keywords = ["runescape", "osrs", "rs3"]
exclude = [".gitignore", "data/*"]
categories = ["development-tools", "filesystem"]

[features]
rs3 = ["whirlpool", "num-bigint", "rune-fs/rs3"]

[[example]]
name = "rs3_update_protocol"
required-features = ["rs3"]

[lib]
name = "rscache"
path = "src/lib.rs"

[dependencies]
crc32fast = "1.3.2"
nom = "7.1.1"
whirlpool = { version = "0.10.1", optional = true }
num-bigint = { version = "0.4.3", optional = true }
serde = { version = "1.0.137", features = ["derive"], optional = true }
thiserror = "1.0.30"
rune-fs = "0.1.4"

[dev-dependencies]
sha1_smol = "1.0.0"
rune-fs = { version = "0.1.4", features = ["rs3"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
