[package]
name = "rs-cache"
version = "0.8.7" # Remember to update usage
authors = ["jimvdl <jimvdlind@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A read-only, high-level, virtual file API for the RuneScape cache."
repository = "https://github.com/jimvdl/rs-cache"
documentation = "https://docs.rs/rs-cache"
readme = "README.md"
keywords = ["runescape", "osrs", "rs3"]
exclude = [".gitignore", "data/*"]
categories = ["development-tools", "filesystem"]

[features]
rs3 = ["whirlpool", "num-bigint", "rune-fs/rs3"]

[[bench]]
name = "578_cache"
harness = false

[[example]]
name = "rs3_update_protocol"
required-features = ["rs3"]

[lib]
name = "rscache"
path = "src/lib.rs"

[dependencies]
crc32fast = "1.3.2"
nom = "8.0.0"
whirlpool = { version = "0.10.1", optional = true }
num-bigint = { version = "0.4.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"
rune-fs = "0.1.6"

[dev-dependencies]
sha1_smol = "1.0.0"
rune-fs = { version = "0.1.6", features = ["rs3"] }
once_cell = "1.16.0"
criterion = "0.7.0"
rand = "0.9.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
